# numeric_interfaces_unit_tests

./: .gitignore  CMakeLists.txt
gtest/: CMakeLists.txt  danil_test.cpp  mekhail_test.cpp  victor_test.cpp
include/: ILogger.h  IVector.h  RC.h  README.md
libs_for_testing/: README.md
src/: Definitions.cpp  Definitions.h  MyMath.cpp  MyMath.h  README.md  VectorImpl.cpp
